--- a/css/default.css
+++ b/css/default.css
@@ -377,7 +377,14 @@ dd { margin: 0 0 0 20px; }
 	content: ": ";
 	margin-left: -0.2em;
 }
-
+.responsive-headline {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
 /* Dictionary Definition Style Markup */
 .dictionary-style dt {
 	display: inline;
